; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/utils/misc/extr_sampling.c_sampler_random_fract.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/utils/misc/extr_sampling.c_sampler_random_fract.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local double @sampler_random_fract(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca double, align 8
  store i32 %0, i32* %2, align 4
  br label %4

4:                                                ; preds = %7, %1
  %5 = load i32, i32* %2, align 4
  %6 = call double @pg_erand48(i32 %5)
  store double %6, double* %3, align 8
  br label %7

7:                                                ; preds = %4
  %8 = load double, double* %3, align 8
  %9 = fcmp oeq double %8, 0.000000e+00
  br i1 %9, label %4, label %10

10:                                               ; preds = %7
  %11 = load double, double* %3, align 8
  ret double %11
}

declare dso_local double @pg_erand48(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
